--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,6 +36,8 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
+      - run: npm i -g pnpm
+      - run: pnpm i
       - run: pnpm build
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -43,7 +45,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.o/'
+          path: ".o/"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
