--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -48,7 +48,7 @@ jobs:
           run_install: false
 
       - name: install dependencies
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
 
       - name: build
         run: pnpm build
