--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"type": "module",
 	"scripts": {
-		"build": "node --loader ts-node/esm build/build.ts"
+		"build": "node --loader ts-node/esm build/build.ts",
+		"watch": "node --loader ts-node/esm build/watch.ts"
 	},
 	"devDependencies": {
 		"@types/jquery": "^3.5.16",
