--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
 	"type": "module",
+	"version": "0.7.0",
 	"scripts": {
 		"build": "node --loader ts-node/esm build/build.ts",
 		"watch": "node --loader ts-node/esm build/watch.ts"
 	},
 	"devDependencies": {
 		"@types/jquery": "^3.5.16",
+		"@types/node": "^20.3.3",
 		"@types/tampermonkey": "^4.0.10",
 		"esbuild": "^0.18.11",
 		"globby": "^13.2.0",
