--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
 	"type": "module",
-	"version": "0.9.1",
+	"version": "0.10.0",
 	"scripts": {
 		"build": "node --loader ts-node/esm build/build.ts",
 		"watch": "node --loader ts-node/esm build/watch.ts"
 	},
 	"devDependencies": {
+		"@ikasoba000/esbuild-plugin-import-url": "^0.1.0",
 		"@types/jquery": "^3.5.16",
 		"@types/node": "^20.3.3",
 		"@types/tampermonkey": "^4.0.10",
+		"cssnano": "^6.0.1",
 		"esbuild": "^0.18.11",
 		"globby": "^13.2.0",
+		"postcss": "^8.4.24",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.1.6"
 	}
