--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "version": "0.15.0",
+  "version": "0.15.1",
   "scripts": {
     "build": "node --loader ts-node/esm build/build.ts",
     "build-dev": "node --loader ts-node/esm build/build.ts http://localhost:8334",
@@ -20,12 +20,14 @@
     "globby": "^13.2.0",
     "postcss": "^8.4.24",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@mdx-js/preact": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@popperjs/core": "^2.11.8",
+    "@twemoji/api": "^15.0.3",
+    "@twemoji/parser": "^15.0.0",
     "@types/react": "^18.2.14",
     "marked": "^5.1.0",
     "preact": "^10.15.1"
